修改几个显示上的问题

--- a/docs/docs/assets/stylesheets/extra.css
+++ b/docs/docs/assets/stylesheets/extra.css
@@ -55,3 +55,15 @@ footer.sponsorship:hover hr {
 footer.sponsorship:not(:hover) .twemoji.heart-throb-hover svg {
     color: var(--md-default-fg-color--lighter) !important;
 }
+
+.grid.cards li:last-of-type {
+    border-color: transparent !important;
+    box-shadow: var(--md-shadow-z3) !important;
+}
+
+.highlight .gp, .highlight .go {
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;          /* Likely future */
+}
